# workshop_txt2sql

./: .gitignore  COMPARATIVO_AGENTE.md  README.md  main.py  pyproject.toml
duckdb-silenciando-o-canhao/: pyproject.toml
duckdb-silenciando-o-canhao/notebooks/: exercicio_pratico.ipynb
duckdb-silenciando-o-canhao/src/: api.py
notebooks/: exercicio_pratico.ipynb
