[project]
name = "duckdb-silenciando-o-canhao"
version = "0.1.0"
description = "Material prático da palestra Silenciando o Canhão: Sandboxes & Otimização com DuckDB"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "jupyterlab>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pyarrow>=14.0.0",
    "polars>=0.19.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
